# FPL-MCP

./: README.md  fpl_token.py  generate_parquet.py  main.py  pyproject.toml  requirements.txt  server.py
data/: bootstrap_static.json
tools/: __init__.py  csv_tools.py  expert_tools.py  general_tools.py  parquet_tools.py  prompts.py  query_tools.py  team_tools.py  transcript_tools.py  video_tools.py
utils/: __init__.py  file_reader.py  fpl_data.py  video_transcript.py
