[project]
name = "mix-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx-sse>=0.4.1",
    "lxml>=6.0.0",
    "mcp[cli]>=1.2",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
]
